--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@ in 22 November 2022 -->
 	<body>
 		<header>
 			<h1>Distribuição Eletrônica</h1>
+			<h2>Linus Pauling</h2>
+			<br />
+			<p style="font-size: 0.7rem">
+				Este programa foi criado por Murilo P. Medeiros
+			</p>
 		</header>
 		<br />
 		<hr />
