--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ in 22 November 2022 -->
 			href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
 			rel="stylesheet" />
 		<link rel="stylesheet" href="style.css" />
+		<link rel="shortcut icon" href="Atom.png" type="image/x-icon" />
 	</head>
 	<body>
 		<header>
